--- a/style/style.css
+++ b/style/style.css
@@ -69,6 +69,9 @@
 }
 
 /* *GENERAL* */
+a {
+  text-decoration: none;
+}
 
 .center {
   display: flex;
@@ -121,6 +124,25 @@
 .background--blue {
   background: var(--grad-light-blue);
 }
+
+/* Components */
+
+.btn {
+  background: var(--clr-dark-navy);
+  color: var(--clr-white);
+  font-size: var(--fs-body);
+  width: 100%;
+  display: block;
+  text-align: center;
+  border-radius: 128px;
+  padding: 1em 0;
+}
+
+.btn:hover,
+.btn:active {
+  background: var(--grads-blue);
+}
+
 /* Result section */
 .result {
   background: var(--grads-blue);
@@ -187,6 +209,10 @@
   font-size: var(--fs-h2-mobile);
 }
 
+.summary__list {
+  margin-bottom: 1.5em;
+}
+
 .summary__list li:not(:last-child) {
   margin-bottom: 1em;
 }
@@ -196,6 +222,7 @@
   font-size: var(--fs-body-mobile);
   padding: 1.125em 1em;
   border-radius: 12px;
+  align-items: center;
 }
 
 .summary__icon {
