working on desktop v

--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,7 @@
 :root {
   /* colors */
   --clr-light-blue: #cac9ff;
+  --clr-very-light-blue: #ecf2ff;
   --clr-white: #fff;
   --clr-dark-navy: #303b59;
   --clr-red: #ff5555;
@@ -73,6 +74,10 @@ a {
   text-decoration: none;
 }
 
+body {
+  background: var(--clr-very-light-blue);
+}
+
 .center {
   display: flex;
   justify-content: center;
@@ -82,6 +87,8 @@ a {
 
 .container {
   width: 375px;
+  min-width: 255px;
+  background: var(--clr-white);
 }
 
 .summary__component {
@@ -144,6 +151,7 @@ a {
 }
 
 /* Result section */
+
 .result {
   background: var(--grads-blue);
   text-align: center;
@@ -153,7 +161,7 @@ a {
 .result__title {
   color: var(--clr-light-blue);
   padding: 1.5em 0;
-  font-size: var(--fs-body);
+  font-size: var(--fs-h2-mobile);
 }
 
 .result__score {
@@ -191,7 +199,7 @@ a {
   color: var(--clr-light-blue);
   font-size: var(--fs-body-mobile);
   line-height: 1.5;
-  width: 260px;
+  /* width: 260px; */
   margin: 0 auto;
   padding-bottom: 2.5em;
 }
@@ -237,4 +245,47 @@ a {
   color: var(--clr-dark-navy);
   font-size: var(--fs-body-mobile);
   font-weight: var(--fw-bold);
+}
+
+/* Media Querry */
+
+@media (min-width: 768px) {
+  .container {
+    width: 736px;
+    display: flex;
+    border-radius: 32px;
+  }
+  .result,
+  .summary {
+    width: 100%;
+  }
+
+  .result {
+    border-radius: 32px;
+  }
+  .result__title {
+    font-size: var(--fs-h2);
+    font-weight: var(--fw-bold);
+  }
+  .result__score {
+    width: 200px;
+    height: 200px;
+    border-radius: 200px;
+  }
+  .result__pointsScored {
+    font-size: var(--fs-bigger);
+    font-weight: var(--fw-extra-bold);
+  }
+  .result__totalPoints {
+    font-size: var(--fs-body);
+    font-weight: var(--fw-bold);
+  }
+  .result__textScore {
+    font-size: var(--fs-h1);
+    font-weight: var(--fw-bold);
+  }
+  .result__body {
+    font-size: var(--fs-body);
+    width: 260px;
+  }
 }
