--- a/style/style.css
+++ b/style/style.css
@@ -199,7 +199,7 @@ body {
   color: var(--clr-light-blue);
   font-size: var(--fs-body-mobile);
   line-height: 1.5;
-  /* width: 260px; */
+  width: 260px;
   margin: 0 auto;
   padding-bottom: 2.5em;
 }
@@ -271,6 +271,7 @@ body {
     width: 200px;
     height: 200px;
     border-radius: 200px;
+    margin-bottom: 4em;
   }
   .result__pointsScored {
     font-size: var(--fs-bigger);
@@ -287,5 +288,19 @@ body {
   .result__body {
     font-size: var(--fs-body);
     width: 260px;
+    padding: 0em 3em 0em 3em;
+  }
+
+  .summary {
+    padding: 2.5em 2.5em 2.875em 2.5em;
+  }
+  .summary__title {
+    font-size: var(--fs-h2);
+  }
+  .summary__item {
+    font-size: var(--fs-body);
+  }
+  .summary__list {
+    margin-bottom: 2.563em;
   }
 }
